--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -57,7 +57,7 @@ a:active.downplayed {
 }
 
 /*
-Special links
+Navigation link
 */
 
 .link-navigation:active {
@@ -65,6 +65,10 @@ Special links
     color: @color-text-downplayed-pressed !important; // [1]
   }
 }
+
+/*
+Menu link
+*/
 
 .link-menu {
   line-height: @grid-vertical;
