--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -203,6 +203,14 @@ Icon texts
   }
 }
 
+.text-move {
+  &:after {
+    .set-icon-font;
+    color: @color-text;
+    content: @icon-arrow-move;
+  }
+}
+
 .text-star {
   &:after {
     .set-icon-font;
