--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -107,6 +107,10 @@ Use `.text-details` to separate details from body text.
   line-height: @grid-vertical-half;
 }
 
+.text-link.emphasis {
+  .set-font-bold();
+}
+
 .text-heading-primary {
   line-height: @grid-vertical-half;
   font-size: @size-font-topheading;
