Added word breaking for .text-link spans

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -105,6 +105,7 @@ Use `.text-details` to separate details from body text.
 .text-teaser, .text-link {
   display: inline-block;
   line-height: @grid-vertical-half;
+  .break-words();
 }
 
 .text-link.emphasis {
