--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -108,6 +108,10 @@ Use `.text-details` to separate details from body text.
   .break-words();
 }
 
+.text-teaser {
+  color: @color-text-downplayed;
+}
+
 .text-link.emphasis {
   .set-font-bold();
 }
