Added clamping to list heading

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -566,7 +566,7 @@ Not compatible with `.row` so we need to apply padding-left and -right inside.
     display: table;
     width: 100%;
     height: inherit;
-    & > span{                   // [1]
+    & > span, & > div{                   // [1]
       text-align: center;
       height: inherit;
       display: table-cell;
