Added search results, needed to know the type so all items have in transientProperties an itemType field

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -455,10 +455,10 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
   padding-left: @padding-inner-group-mixed;
 
   // NOTE: all buttons have height defined
-  button, a {
+  & > button, & > a, & > span {
     padding-right: @grid-horizontal;  /* [1] */
   }
-  a {
+  & > a {
     height: @grid-vertical;
   }
 }
