--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -74,3 +74,10 @@ Menu link
   line-height: @grid-vertical;
   display: inline-block;
 }
+
+/*
+Search results
+*/
+.link-search-result {
+  line-height: @grid-vertical-half;
+}
