--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -165,6 +165,20 @@ Navigation texts
 }
 
 /*
+Search results (omnibar, deleted)
+*/
+
+.text-search-result {
+  font-size: @size-font-small;
+}
+
+.text-search-type {
+  color: @color-text-downplayed;
+  font-size: @size-font-small;
+  .set-font-bold();
+}
+
+/*
 Icon texts
 */
 
