--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -272,6 +272,7 @@ Vertically center .container-master and .container-editor in large screens
 .group-mixed--middle:first-child {
   & > a{                        // [1]
     display: table;
+    width: 100%;
     & > span{                   // [1]
       height: inherit;
       vertical-align: middle;
