--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -182,6 +182,17 @@ TODO: working example needed!
   }
 }
 
+// 1. Set height to 100% so that content can be scrollable.
+.editable-field-container.scrollable {
+  height: 100%; // [1]
+}
+
+// 1. Make inner content scrollable.
+.editable-field-container.scrollable > div{
+  overflow-y: auto; // [1]
+  height: 100%;     // [1]
+}
+
 /*
 *************************************************************
 # Pick a day
