User preferences syncing, changed default page to focus.

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -162,6 +162,7 @@ Navigation texts
   .set-font-bold;
   color: @color-text-inverse;
   font-size: @size-font-topheading;
+  line-height: @grid-vertical-half;
 }
 
 /*
