--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -246,6 +246,15 @@ Icon texts
   }
 }
 
+.text-calendar {
+  &:after {
+    .set-icon-font;
+    color: @color-icon-deactivated;
+    content: @icon-calendar;
+    font-size: 23px;
+  }
+}
+
 .text-star {
   &:after {
     .set-icon-font;
