--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -32,6 +32,8 @@ Text colors
 @color-text-downplayed-light: #d3d3d3;
 @color-text-inverse: #FFFFFF;
 
+@color-icon-deactivated: #707070;
+
 /*
 Background colors
 */
