--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -36,6 +36,7 @@ Extended Mind specific UI-components, e.g. welcome/landing page, timeline, sidem
 .datepicker{
   line-height: @height-heading;
   vertical-align: middle;
+  padding-bottom: @margin-bottom-heading-justified;
 }
 
 .datepicker-day {
