--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -465,6 +465,7 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
   }
   & > a {
     height: @grid-vertical;
+    line-height: @grid-vertical;
   }
 }
 
