Using arrow icon in lists view

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -165,6 +165,14 @@ Navigation texts
   line-height: @grid-vertical-half;
 }
 
+.large.text-navigation-back:before {
+  font-size: @size-icon-arrow-large;
+}
+
+.large.text-navigation-forward:after {
+  font-size: @size-icon-arrow-large;
+}
+
 /*
 Search results (omnibar, deleted)
 */
