Fixed lists adding

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -167,6 +167,9 @@ Navigation texts
 
 .large.text-navigation-back:before {
   font-size: @size-icon-arrow-large;
+
+  // TODO: This might need to change if icon changes!
+  vertical-align: -5%;
 }
 
 .large.text-navigation-forward:after {
