Tweaked menu layout

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -82,7 +82,7 @@ TODO: em grid structure explained in plain English (when new grid structure deci
 Menu
 */
 
-@height-menu-footer: 80px;
+@height-menu-footer: @grid-vertical * 2;
 // 1. Use native-style scrolling in WebKit browsers
 .container-menu {
   -webkit-overflow-scrolling: touch;  // [1]
