--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -75,6 +75,10 @@ Menu link
   display: inline-block;
 }
 
+.link-menu.height-large {
+  line-height: @grid-vertical * 2;
+}
+
 /*
 Search results
 */
