--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -263,8 +263,8 @@ Icon texts
     .set-icon-font;
     color: @color-text;
     content: @icon-star;
-    line-height: @grid-vertical;
     font-size: @size-icon-star;
+    vertical-align: middle;
   }
 }
 .text-star.inverse:after{
