--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -273,3 +273,6 @@ Icon texts
 .text-star.small:after{
   font-size: @size-icon-star-small;
 }
+.text-star.inactive:after {
+  color: @color-text-downplayed;
+}
