Nicer layout for context heading

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -515,6 +515,11 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
   margin-bottom: @margin-bottom-heading-justified;
 }
 
+.group-heading.long {
+  font-size: @size-font-not-so-large;
+  margin-bottom: 0;
+}
+
 /*
 `.group-error` groups together multiple error messages.
 */
