--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -28,6 +28,7 @@ TODO: Icons are not working yet with Phytoplankton
 @icon-calendar: "\e607";
 @icon-star: "\e608";
 @icon-arrow-left: "\e609";
+@icon-arrow-left-narrow: "\e612";
 @icon-arrow-right: "\e60c";
 @icon-arrow-move: "\e60d";
 @icon-triangle-down: "\e600";
@@ -36,6 +37,7 @@ TODO: Icons are not working yet with Phytoplankton
 @icon-logo-with-text: "\e60b";
 @icon-selection-checked: "\e60f";
 @icon-selection-empty: "\e610";
+@icon-sort: "\e611";
 
 @font-face {
 	font-family: 'icomoon';
