Changed to narrower arrow icon for lists

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -172,8 +172,7 @@ Navigation texts
 
 .large.text-navigation-back:before {
   font-size: @size-icon-arrow-large;
-
-  // TODO: This might need to change if icon changes!
+  content: @icon-arrow-left-narrow;
   vertical-align: -5%;
 }
 
