--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -24,12 +24,13 @@ TODO: Icons are not working yet with Phytoplankton
 @icon-x: "\e603";
 @icon-trash: "\e604";
 @icon-menu: "\e605";
-@icon-plus: "\e606";
+@icon-plus: "\e613";
 @icon-calendar: "\e607";
 @icon-star: "\e608";
 @icon-arrow-left: "\e609";
-@icon-arrow-left-narrow: "\e612";
 @icon-arrow-right: "\e60c";
+@icon-arrow-left-narrow: "\e612";
+@icon-arrow-right-narrow: "\e606";
 @icon-arrow-move: "\e60d";
 @icon-triangle-down: "\e600";
 @icon-triangle-right: "\e601";
