--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -38,6 +38,7 @@ Text colors
 Background colors
 */
 @color-background-menu: #212121;
+@color-background-editor-inactive: #dadada;
 @color-background-toaster: #c1c1c1;
 @color-background-highlighted: #c1c1c1;
 @color-background-btn-inactive: #919191;
