--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -313,6 +313,10 @@ margin.
   padding-bottom: 14px;
 }
 
+.group-mixed--right.top {
+  vertical-align: top;
+}
+
 /*
 Class `.group-btn` groups automatically button elements horizontally. Works for 1 and 2 buttons.
 
