Nicer notes list layout

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -547,9 +547,11 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
 `.group-teaser` is used for displaying a teaser.
 */
 .group-teaser {
+  height: auto;
   span {
     padding-left: @grid-horizontal;
     padding-right: @grid-horizontal;
+    margin-bottom: @grid-vertical-half;
   }
 }
 
