--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -86,3 +86,11 @@ Search results
   height: auto;
   line-height: @grid-vertical-half;
 }
+
+/*
+Note Heading
+*/
+.link-note-heading {
+  line-height: @grid-vertical-half;
+  margin-bottom: 5px;
+}
