--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -114,6 +114,7 @@ Use `.text-details` to separate details from body text.
 }
 
 .text-teaser {
+  font-size: @size-font-medium;
   color: @color-text-downplayed;
 }
 
