--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -624,6 +624,11 @@ Not compatible with `.row` so we need to apply padding-left and -right inside.
   max-width: @max-width-group-symmetrical-middle * 2;
 }
 
+.group-centered {
+  width: 100%;
+  text-align: center;
+}
+
 /*
 **************************************************************************
 # Swiper
