plus and x icon polish

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -11,12 +11,13 @@ TODO: Icons are not working yet with Phytoplankton
 
 @size-icon-logo: 19px;
 @size-icon-menu: 17px;
-@size-icon-plus: 30px;
+@size-icon-plus: 33px;
 @size-icon-toggle-completed: 20px;
 @size-icon-arrow-small: 11px;
 @size-icon-arrow-large: 20px;
 @size-icon-star: 16px;
 @size-icon-star-small: 8px;
+@size-icon-x: 10px;
 
 // Icon character codes
 @icon-show-completed: "\e60e";
