--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -242,11 +242,12 @@ Icon texts
 }
 
 .text-plus {
+  font-size: @size-icon-plus;
+  line-height: @size-icon-plus;
   &:after {
     .set-icon-font;
     color: @color-text-highlighted;
     content: @icon-plus;
-    font-size: @size-icon-plus;
   }
 }
 
