--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -485,6 +485,13 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
   }
 }
 
+// 1. Set padding-left to default padding for inactive.
+//    NOTE: It would be better to use :empty selector but it did not work with AngularJS 1.3.0 on element with
+//          ng-if so use .inactive instead.
+.group-mixed--right.inactive {
+  padding-left: @grid-horizontal; // [1]
+}
+
 // 1. .group-mixed--middle can be used directly in <a> elements for increased clicking area.
 .group-mixed--middle:first-child {
   padding-left: @grid-horizontal;   /* [1] */
