Reverted footer height change in 8087ba95fcb9558e7f7b4d2fe21f6bda79d3eafa, because height info is also needed in JavaScript and thus is different now.

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -127,7 +127,7 @@ Vertically center .container-master and .container-editor in large screens
 **************************************************************************
 # LEVEL 4: Fluid, toaster
 */
-@height-footer: @grid-vertical * 1.1;
+@height-footer: @grid-vertical;
 
 /*
 `.container-fluid` sets the vertical positioning of the content area.
