Implemented trash to editors

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -31,8 +31,8 @@ Text colors
 @color-text-downplayed-pressed: darken(@color-text-downplayed, 10%);
 @color-text-downplayed-light: #d3d3d3;
 @color-text-inverse: #FFFFFF;
-
 @color-icon-deactivated: #707070;
+@color-text-disabled: #b0b0b6;
 
 /*
 Background colors
