Working about page

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -649,6 +649,27 @@ Not compatible with `.row` so we need to apply padding-left and -right inside.
   }
 }
 
+.group-html-external {
+  h1 {
+    font-size: 24px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  h2 {
+    font-size: 18px;
+  }
+  h3 {
+    font-size: 16px;
+  }
+  h4 {
+    padding-top: 10px;
+    font-size: 14px;
+  }
+  p, li {
+    font-size: 12px;
+  }
+}
+
 /*
 **************************************************************************
 # Swiper
