Fixed focus position different on different fonts

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -97,8 +97,11 @@ Menu
   margin: 0 auto -@height-menu-footer; /* the bottom margin is the negative value of the footer's height */
   .separate {
     // use this to separate link elements from other
-    line-height: 73px;
+    line-height: 84px;
     padding-bottom: 15px;
+    span {
+      line-height: inherit;
+    }
   }
   a:first-child {
     padding-top: 6px;
