--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -15,6 +15,7 @@ TODO: Icons are not working yet with Phytoplankton
 @size-icon-toggle-completed: 20px;
 @size-icon-arrow-small: 11px;
 @size-icon-arrow-large: 20px;
+@size-icon-arrow-move: 20px;
 @size-icon-star: 16px;
 @size-icon-star-small: 8px;
 @size-icon-x: 10px;
